--- a/app/src/main/res/layout/list_view_para_item_title.xml
+++ b/app/src/main/res/layout/list_view_para_item_title.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/para_title_tv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
