--- a/app/src/main/res/layout/fragment_out_para.xml
+++ b/app/src/main/res/layout/fragment_out_para.xml
@@ -119,8 +119,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/para_rv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     <com.mobeta.android.dslv.DragSortListView
         android:layout_width="wrap_content"
