--- a/app/src/main/res/layout/list_view_para_item.xml
+++ b/app/src/main/res/layout/list_view_para_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/common_card_background">
     <TextView
         android:id="@+id/para_key_tv"
+        android:text="123"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
