--- a/app/src/main/res/layout/list_view_para_item_title.xml
+++ b/app/src/main/res/layout/list_view_para_item_title.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
+        android:text="@string/app_name"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:id="@+id/para_title_tv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:textSize="18sp"/>
 </LinearLayout>
