--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,8 +18,13 @@
     <color name="action_item_title">#7C7F89</color>
     <color name="action_item_line">#DDDADFE5</color>
 
+    <color name="para_pkg_color">@color/colorPrimary</color>
+    <color name="para_line_color">#DDDADFE5</color>
+    <color name="para_title_color">#F65EA5</color>
+    <color name="para_content_color">#7C7F89</color>
+
+
     <color name="text_color">#7C7F89</color>
-    <color name="title_color">@color/colorPrimary</color>
     <color name="name_color">#F65EA5</color>
 
     <color name="item_function_bg_pressed">#7050B3FA</color>
