--- a/app/src/main/res/layout/list_view_para_item.xml
+++ b/app/src/main/res/layout/list_view_para_item.xml
@@ -2,51 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/common_card_background"
+    android:padding="@dimen/para_padding"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/para_layout_height">
-
-        <TextView
-            android:id="@+id/pkg_name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/para_pkg_margin"
-            android:layout_marginStart="@dimen/para_pkg_margin"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="@string/app_name"
-            android:textColor="@color/para_pkg_color"
-            android:textSize="@dimen/para_pkg_size" />
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/para_line"
-        android:background="@color/para_line_color" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/para_item_margin"
-        android:layout_marginLeft="@dimen/para_item_margin"
-        android:layout_marginRight="@dimen/para_item_margin"
-        android:layout_marginStart="@dimen/para_item_margin"
-        android:layout_marginTop="@dimen/para_item_margin"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:text="@string/key"
-            android:textColor="@color/para_title_color"
-            android:textSize="@dimen/para_item_title_size" />
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/para_key_tv"
@@ -58,19 +20,29 @@
             android:gravity="center_vertical"
             android:maxLines="1"
             android:text="@string/app_name"
-            android:textColor="@color/para_content_color"
+            android:textColor="@color/para_title_color"
             android:textSize="@dimen/para_item_title_size" />
-    </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/pkg_name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="@dimen/para_pkg_margin"
+            android:layout_marginRight="@dimen/para_pkg_margin"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="@string/app_name"
+            android:textColor="@color/para_pkg_color"
+            android:textSize="@dimen/para_pkg_size" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/para_item_margin"
-        android:layout_marginLeft="@dimen/para_item_margin"
-        android:layout_marginRight="@dimen/para_item_margin"
-        android:layout_marginStart="@dimen/para_item_margin"
-        android:layout_marginTop="@dimen/para_item_margin"
-        android:background="@drawable/value_background">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/para_value_tv"
@@ -80,6 +52,7 @@
             android:text="@string/app_name"
             android:textColor="@color/para_content_color"
             android:textSize="@dimen/para_item_title_size" />
-    </FrameLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
