--- a/app/src/main/res/layout/list_view_para_item_title.xml
+++ b/app/src/main/res/layout/list_view_para_item_title.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/para_title_height">
     <TextView
         android:text="@string/app_name"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="@dimen/para_item_margin"
+        android:layout_marginLeft="@dimen/para_item_margin"
         android:id="@+id/para_title_tv"
+        android:fontFamily="sans-serif-light"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="18sp"/>
+        android:gravity="center_vertical"
+        android:textSize="@dimen/para_item_title_size"/>
 </LinearLayout>
