--- a/app/src/main/res/layout/fragment_out_para.xml
+++ b/app/src/main/res/layout/fragment_out_para.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/action_selector"
-            android:clickable="true" >
+            android:clickable="true">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
                 android:gravity="center_vertical"
                 android:text="@string/start"
                 android:textColor="@color/action_item_title"
-                android:textSize="@dimen/action_item_text_size"/>
+                android:textSize="@dimen/action_item_text_size" />
         </RelativeLayout>
 
         <View
@@ -123,8 +123,9 @@
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     <com.mobeta.android.dslv.DragSortListView
+        android:id="@+id/para_dsl"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </com.mobeta.android.dslv.DragSortListView>
+        android:layout_height="wrap_content"
+        android:divider="@color/para_line_color"></com.mobeta.android.dslv.DragSortListView>
 
 </LinearLayout>
