--- a/app/src/main/res/layout/fragment_out_para.xml
+++ b/app/src/main/res/layout/fragment_out_para.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dslv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -124,8 +125,21 @@
 
     <com.mobeta.android.dslv.DragSortListView
         android:id="@+id/para_dsl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:divider="@color/para_line_color"></com.mobeta.android.dslv.DragSortListView>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/para_line_color"
+        dslv:collapsed_height="1dp"
+        dslv:drag_enabled="true"
+        dslv:drag_handle_id="@id/drag_handle"
+        dslv:drag_scroll_start="0.33"
+        dslv:drag_start_mode="onDown"
+        dslv:float_alpha="0.6"
+        dslv:max_drag_scroll_speed="0.5"
+        dslv:remove_enabled="false"
+        dslv:remove_mode="flingRemove"
+        dslv:slide_shuffle_speed="0.3"
+        dslv:sort_enabled="true"
+        dslv:track_drag_sort="false"
+        dslv:use_default_controller="true"></com.mobeta.android.dslv.DragSortListView>
 
 </LinearLayout>
