--- a/app/src/main/res/layout/list_view_para_item.xml
+++ b/app/src/main/res/layout/list_view_para_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/para_padding"
-    android:background="@color/white"
+    android:background="@drawable/common_card_background"
     android:orientation="vertical">
 
     <RelativeLayout
