--- a/app/src/main/res/layout/activity_out_para_detail.xml
+++ b/app/src/main/res/layout/activity_out_para_detail.xml
@@ -16,6 +16,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/para_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
