--- a/app/src/main/res/drawable/ic_play.xml
+++ b/app/src/main/res/drawable/ic_play.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="@color/action_item_title"
+        android:fillColor="@color/action_item_green"
         android:pathData="M8,5v14l11,-7z"/>
 </vector>
