--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="action_item_disable">#DDDADFE5</color>
     <color name="action_item_title">#7C7F89</color>
     <color name="action_item_line">#DDDADFE5</color>
+    <color name="action_item_dark_red">#C9302C</color>
+    <color name="action_item_green">#449d44</color>
 
     <color name="para_line_color">#DDDADFE5</color>
     <color name="para_pkg_color">#7C7F89</color>
