--- a/app/src/main/res/layout/list_view_para_floating_item.xml
+++ b/app/src/main/res/layout/list_view_para_floating_item.xml
@@ -8,12 +8,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/para_item_margin"
-        android:textSize="@dimen/para_item_title_size"/>
+        android:textSize="@dimen/para_item_title_size"
+        android:textColor="@color/floating_text_color"/>
     <TextView
         android:id="@+id/para_value_tv"
         android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/para_item_margin"
-        android:textSize="@dimen/para_item_title_size"/>
+        android:textSize="@dimen/para_item_title_size"
+        android:textColor="@color/floating_text_color"/>
 </LinearLayout>
