--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="white">#FFFFFF</color>
 
     <color name="app_background">#F8F8F8</color>
+    <color name="splash_text_color">#7C7F89</color>
 
     <color name="navigation_menu_bg">#333333</color>
     <color name="navigation_menu_title_color">#7C7F89</color>
@@ -30,4 +31,6 @@
     
     <color name="floating_detail_background">#DD202020</color>
     <color name="floating_text_color">#F8F8F8</color>
+
+    <color name="about_link">@color/colorPrimary</color>
 </resources>
