--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="splash_image_size">96dp</dimen>
+    <dimen name="splash_text_margin">25dp</dimen>
     <dimen name="navigation_drawer_width">180dp</dimen>
     <dimen name="navigation_menu_title_margin">8dp</dimen>
     <dimen name="navigation_menu_title_height">38dp</dimen>
@@ -34,4 +36,8 @@
     <dimen name="floating_logo_size">48dp</dimen>
     <dimen name="floating_logo_image_padding">12dp</dimen>
     <dimen name="floating_detail_width">320dp</dimen>
+
+    <dimen name="about_author_size">96dp</dimen>
+    <dimen name="about_author_margin_top">96dp</dimen>
+    <dimen name="about_margin">24dp</dimen>
 </resources>
