--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -31,6 +31,7 @@
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     <android.support.v7.widget.RecyclerView
+        android:visibility="gone"
         android:layout_below="@+id/filter"
         android:id="@+id/filter_rv"
         android:layout_width="match_parent"
