--- a/app/src/main/res/layout/list_view_filter_item.xml
+++ b/app/src/main/res/layout/list_view_filter_item.xml
@@ -2,5 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_tv"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"/>
+    android:layout_height="@dimen/log_filter_item_height"
+    android:layout_gravity="center"
+    android:background="@drawable/action_selector"
+    android:clickable="true"
+    android:gravity="center"
+    android:textColor="@color/white" />
