--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/about"
-        android:orderInCategory="10"
+        android:orderInCategory="0"
         android:title="@string/about"/>
+    <item
+        android:id="@+id/setting"
+        android:orderInCategory="1"
+        android:title="@string/setting"/>
 </menu>
