--- a/luban.infrastructure.theme/src/main/res/values/colors.xml
+++ b/luban.infrastructure.theme/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#50B3FA</color>
     <color name="colorAccent">#50B3FA</color>
     <color name="app_background">#F8F8F8</color>
+    <color name="white">@android:color/white</color>
 </resources>
