--- a/luban.plugin.op/src/main/res/layout/fragment_out_para.xml
+++ b/luban.plugin.op/src/main/res/layout/fragment_out_para.xml
@@ -89,9 +89,9 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/para_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
