--- a/luban.plugin.floating/src/main/res/layout/floating_detail.xml
+++ b/luban.plugin.floating/src/main/res/layout/floating_detail.xml
@@ -5,8 +5,8 @@
     android:background="@color/floating_detail_background"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/para_rv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
