--- a/luban.plugin.op/src/main/res/layout/activity_out_para_detail.xml
+++ b/luban.plugin.op/src/main/res/layout/activity_out_para_detail.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     android:background="@color/app_background"
     android:orientation="vertical">
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/para_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
